--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ setw -g allow-rename off
 setw -g automatic-rename off
 setw -g aggressive-resize on
 set-option -g default-command bash
+set-option -g allow-rename off
 
 # Enable mouse mode
 set -g mouse on
@@ -20,10 +21,19 @@ unbind C-b
 unbind '"'
 unbind %
 unbind &
+unbind c
+unbind [
+unbind ]
+unbind p 
+unbind l
+unbind n 
+unbind r
 
 # Change prefix key to C-a
 set -g prefix C-a
 
+# Pane Controls:
+# ==============
 # split panes using Alt + - and Alt + \\
 bind -n M-\\ split-window -h
 bind -n M-- split-window -v
@@ -36,3 +46,27 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Window Controls: 
+# ================
+bind -n C-n new-window
+bind -n C-k kill-window
+bind -n C-] next-window
+bind -n C-[ previous-window
+bind -n C-l choose-window
+bind -n C-r command-prompt 'rename-window %%'
+
+# Session Controls:
+# =================
+
+# panes
+set -g pane-border-style 'fg=colour2 bg=colour0'
+set -g pane-active-border-style 'bg=colour0 fg=colour3'
+
+#status right
+set -g status-right '┃ %m-%d-%y ┃ %H:%M  ' 
+
+#status left
+set -g status-left '  #S ┃ '
+setw -g window-status-format ' #I:#W ┃'
+setw -g window-status-current-format '#F#I:#W ┃'
