--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,10 +13,13 @@ setw -g aggressive-resize on
 set-option -g default-command bash
 set-option -g allow-rename off
 
-# Enable mouse mode
+# Enable mouse mode & copy to system buffer.
 set -g mouse on
+set-option -s set-clipboard off
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
-# Unbind old 
+
+# Unbind old
 unbind C-b
 unbind '"'
 unbind %
@@ -24,9 +27,9 @@ unbind &
 unbind c
 unbind [
 unbind ]
-unbind p 
+unbind p
 unbind l
-unbind n 
+unbind n
 unbind r
 
 # Change prefix key to C-a
@@ -47,7 +50,7 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Window Controls: 
+# Window Controls:
 # ================
 bind -n C-n new-window
 bind -n C-k kill-window
@@ -64,7 +67,7 @@ set -g pane-border-style 'fg=colour2 bg=colour0'
 set -g pane-active-border-style 'bg=colour0 fg=colour3'
 
 #status right
-set -g status-right '┃ %m-%d-%y ┃ %H:%M  ' 
+set -g status-right '┃ %m-%d-%y ┃ %H:%M  '
 
 #status left
 set -g status-left '  #S ┃ '
