--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,34 +12,53 @@ setw -g automatic-rename off
 setw -g aggressive-resize on
 set-option -g default-command bash
 set-option -g allow-rename off
+set -g base-index 1
 
 # Enable mouse mode & copy to system buffer.
 set -g mouse on
 set-option -s set-clipboard off
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
-
-# Unbind old
-unbind C-b
-unbind '"'
+# Unbind default keys
+unbind ,
 unbind %
-unbind &
-unbind c
+unbind '"'
+unbind \}
+unbind \{
 unbind [
 unbind ]
+unbind "'"
+unbind n
 unbind p
 unbind l
-unbind n
-unbind r
+unbind M-n
+unbind M-p
+unbind o
+unbind &
+unbind "#"
+unbind =
+unbind z
+unbind M-Up
+unbind M-Down
+unbind M-Right
+unbind M-Left
+unbind -
 
 # Change prefix key to C-a
 set -g prefix C-a
+bind C-a send-prefix
+
+# Source reload with prefix + s
+bind s source-file ~/.tmux.conf \; display "  Source config reloaded."
 
 # Pane Controls:
 # ==============
 # split panes using Alt + - and Alt + \\
 bind -n M-\\ split-window -h
 bind -n M-- split-window -v
+
+# Toggle pane resize, zoom in - zoom out.
+bind -n M-r resize-pane -Z
 
 # kill pane using Alt + k
 bind -n M-k kill-pane
@@ -52,24 +71,36 @@ bind -n M-Down select-pane -D
 
 # Window Controls:
 # ================
-bind -n C-n new-window
-bind -n C-k kill-window
-bind -n C-] next-window
-bind -n C-[ previous-window
-bind -n C-l choose-window
-bind -n C-r command-prompt 'rename-window %%'
+# Basic window controls
+bind n new-window
+bind k kill-window
+bind c choose-window
+bind r command-prompt 'rename-window %%'
+bind [ previous-window
+bind ] next-window
 
-# Session Controls:
+# Window hotkeys
+bind 1 select-window -t 1
+bind 2 select-window -t 2
+bind 3 select-window -t 3
+bind 4 select-window -t 4
+bind 5 select-window -t 5
+bind 6 select-window -t 6
+bind 7 select-window -t 7
+bind 8 select-window -t 8
+bind 9 select-window -t 9
+
+# Appearance:
 # =================
-
-# panes
+# Status bar colors
 set -g pane-border-style 'fg=colour2 bg=colour0'
 set -g pane-active-border-style 'bg=colour0 fg=colour3'
 
-#status right
-set -g status-right '┃ %m-%d-%y ┃ %H:%M  '
+# Status right: displays time, date, and highlights when prefix is pressed
+prfx="#{?client_prefix,#[fg=color255 bold],}"
+set -g status-right "┃ %m-%d-%y ┃ %H:%M ┃${prfx} [!] "
 
-#status left
+# Status left displays session name, and highlights active window.
 set -g status-left '  #S ┃ '
-setw -g window-status-format ' #I:#W ┃'
-setw -g window-status-current-format '#F#I:#W ┃'
+setw -g window-status-format '#I:#W ┃'
+setw -g window-status-current-format '#[fg=color255,bold]#I:#W #[fg=color0,none]┃'
